--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -3,8 +3,8 @@
 %\lstinputlisting{1_Basic/Shell_script.cpp}
 %\subsection{Default code}
 %\lstinputlisting{1_Basic/Default_code.cpp}
-\subsection{vimrc}
-\lstinputlisting{1_Basic/vimrc.cpp}
+\subsection{Hash Commands}
+\lstinputlisting{1_Basic/hash.sh}
 \inputcode{readchar}{1_Basic/readchar.cpp}
 \inputcode{Black Magic}{1_Basic/black_magic.cpp}
 \inputcode{Pragma Optimization}{1_Basic/Pragma.cpp}
@@ -13,9 +13,9 @@
 
 
 \section{Graph}
-\inputcode{BCC Vertex*}{2_Graph/BCC_Vertex.cpp} % test by Library Checker Biconnected Components, block-cut tree test by CF 102512 A
-\inputcode{Bridge*}{2_Graph/Bridge.cpp} % test by Library Checker Two-Edge-Connected Components
-\inputcode{SCC*}{2_Graph/SCC.cpp} % SCC test by Library Checker Strongly Connected Components
+\inputcode{EBCC*}{2_Graph/EBCC.cpp} % test by caido
+\inputcode{VBCC*}{2_Graph/VBCC.cpp} % test by caido
+\inputcode{SCC*}{2_Graph/SCC.cpp} % test by caido
 \inputcode{2SAT*}{2_Graph/2SAT.cpp} % test by ARC069 F
 \inputcode{MinimumMeanCycle*}{2_Graph/MinimumMeanCycle.cpp} % test by TIOJ 1934
 \inputcode{Virtual Tree*}{2_Graph/Virtual_Tree.cpp} % test by luogu P2495
@@ -167,6 +167,5 @@
 \inputcode{Min Plus Convolution*}{9_Else/min_plus_convolution.cpp} % test by Library Checker Min Plus Convolution (Convex and Arbitrary)
 \inputcode{Bitset LCS}{9_Else/BitsetLCS.cpp}
 %\inputcode{N Queens Problem}{9_Else/NQueens.cpp}
-\section{Python}
-\subsection{Misc}
-\lstinputlisting[language=Python]{11_Python/misc.py}
+\subsection{Python}
+\lstinputlisting[language=Python]{9_Else/misc.py}
