--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -3,7 +3,7 @@
 %\lstinputlisting{1_Basic/Shell_script.cpp}
 %\subsection{Default code}
 %\lstinputlisting{1_Basic/Default_code.cpp}
-\subsection{Hash Commands}
+\subsection{Hash.sh}
 \lstinputlisting{1_Basic/hash.sh}
 \inputcode{readchar}{1_Basic/readchar.cpp}
 \inputcode{Black Magic}{1_Basic/black_magic.cpp}
