--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -64,7 +64,7 @@
 \inputcode{Z-value*}{5_String/Z-value.cpp} % test by Lib-Checker Z Algorithm
 \inputcode{Manacher*}{5_String/Manacher.cpp} % test by Lib-Checker Enumerate Palindromes
 %\inputcode{Suffix Array}{5_String/Suffix_Array.cpp}
-\inputcode{SAIS*}{5_String/SAIS-C++20.cpp} % test by CF 104901 H, Lib-Checker Suffix Array
+\inputcode{SAIS*}{5_String/SAIS-old.cpp} % test by CF 104901 H, Lib-Checker Suffix Array
 \inputcode{Aho-Corasick Automatan*}{5_String/Aho-Corasick_Automatan.cpp} % test by CF 102511 G (World Finals' problem)
 \inputcode{Smallest Rotation}{5_String/Smallest_Rotation.cpp}
 \inputcode{De Bruijn sequence*}{5_String/De_Bruijn_sequence.cpp} % test by CF 102001 C
