--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -36,6 +36,7 @@
 \inputcode{Leftist Tree}{3_Data_Structure/Leftist_Tree.cpp}
 \inputcode{Heavy light Decomposition*}{3_Data_Structure/Heavy_light_Decomposition.cpp} % test by CSES Path Queries II
 \inputcode{Centroid Decomposition*}{3_Data_Structure/Centroid_Decomposition.cpp} % test by TIOJ 1171
+\inputcode{Treap*}{3_Data_Structure/Treap.cpp}
 % \inputcode{Smart Pointer}{3_Data_Structure/Smart_Pointer.cpp}
 \inputcode{LiChaoST*}{3_Data_Structure/LiChaoST.cpp} % test by Library Checker Line Add Get Min
 \inputcode{Link cut tree*}{3_Data_Structure/link_cut_tree.cpp} % test by luogu P3690
@@ -70,7 +71,7 @@
 \inputcode{De Bruijn sequence*}{5_String/De_Bruijn_sequence.cpp} % test by CF 102001 C
 \inputcode{Extended SAM*}{5_String/exSAM.cpp} % test by CF 616 C
 \inputcode{PalTree*}{5_String/PalTree.cpp} % test by APIO 2014 palindrome
-\inputcode{Main Lorentz}{5_String/MainLorentz.cpp}
+% \inputcode{Main Lorentz}{5_String/MainLorentz.cpp}
 
 
 \section{Math}
@@ -83,7 +84,7 @@
 \inputcode{Miller Rabin*}{6_Math/Miller_Rabin.cpp} % test by NTUJ 1237
 % \inputcode{Big number{6_Math/Big_number.cpp}}
 %\inputcode{Fraction}{6_Math/Fraction.cpp}
-\inputcode{Simultaneous Equations}{6_Math/Simultaneous_Equations.cpp}
+\inputcode{Linear Equations}{6_Math/Linear_Equations.cpp}
 \inputcode{Pollard Rho*}{6_Math/Pollard_Rho.cpp} % test by Lib-Checker Factorize
 \inputcode{Simplex Algorithm}{6_Math/Simplex_Algorithm.cpp}
 \subsubsection{Construction}
@@ -130,7 +131,7 @@
 \inputcode{VectorInPoly*}{8_Geometry/Vector_in_poly.cpp} % test by qoj 5479
 \inputcode{PolyUnion*}{8_Geometry/PolyUnion.cpp} % test by CF 101673 A
 %\inputcode{PolyCut}{8_Geometry/PolyCut.cpp}
-\inputcode{Trapezoidalization}{8_Geometry/Trapezoidalization.cpp} % test by aizu CGL_3_C, TIOJ 1403
+% \inputcode{Trapezoidalization}{8_Geometry/Trapezoidalization.cpp} % test by aizu CGL_3_C, TIOJ 1403
 \inputcode{Polar Angle Sort*}{8_Geometry/Polar_Angle_Sort.cpp} % test by NTUJ 2270
 \inputcode{Half plane intersection*}{8_Geometry/Half_plane_intersection.cpp} % test by qoj 2162 (World Finals' problem)
 \inputcode{HPI Alternative Form}{8_Geometry/HPIGeneralLine.cpp}
