Add find solution basis to system of linear equations

--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -84,7 +84,7 @@
 \inputcode{Miller Rabin*}{6_Math/Miller_Rabin.cpp} % test by NTUJ 1237
 % \inputcode{Big number{6_Math/Big_number.cpp}}
 %\inputcode{Fraction}{6_Math/Fraction.cpp}
-\inputcode{Linear Equations}{6_Math/Linear_Equations.cpp}
+\inputcode{System of Linear Equations}{6_Math/Linear_Equations.cpp}
 \inputcode{Pollard Rho*}{6_Math/Pollard_Rho.cpp} % test by Lib-Checker Factorize
 \inputcode{Simplex Algorithm}{6_Math/Simplex_Algorithm.cpp}
 \subsubsection{Construction}
