--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -64,7 +64,8 @@
 \inputcode{KMP}{5_String/KMP.cpp}
 \inputcode{Z-value*}{5_String/Z-value.cpp} % test by Lib-Checker Z Algorithm
 \inputcode{Manacher*}{5_String/Manacher.cpp} % test by Lib-Checker Enumerate Palindromes
-%\inputcode{Suffix Array}{5_String/Suffix_Array.cpp}
+\inputcode{Suffix Array}{5_String/SA_LCP_becaido.cpp} % test by caido
+\inputcode{SAIS C++20}{5_String/SAIS-C++20.cpp}
 \inputcode{SAIS*}{5_String/SAIS-old.cpp} % test by CF 104901 H, Lib-Checker Suffix Array
 \inputcode{Aho-Corasick Automatan*}{5_String/Aho-Corasick_Automatan.cpp} % test by CF 102511 G (World Finals' problem)
 \inputcode{Smallest Rotation}{5_String/Smallest_Rotation.cpp}
